# Akshay_Aralikatti_612_Computer_Vision

Latex/: main.tex  rapport.cls
assignment_1/: Makefile
assignment_1/__MACOSX/task3/: ._sharpen
assignment_1/task2/: brighten  brighten.cpp  capture  diffcapture
assignment_1/task3/: Trees.ppm  output_grid.ppm  sharpen  sharpen_grid  sharpen_grid.c
assignment_1/task4/: .face_detect.cpp.swp  face_detect  face_detect.cpp
assignment_1/task5/: custom_camera  custom_camera.cpp
assignment_2/Akshay.Aralikatti/: CMakeLists.txt  canny.cpp  capture.cpp  capture_sobel_canny.cpp  makefile  simple_capture.c  sobel.cpp
assignment_3/: makefile
assignment_3/task_2/: houghlines  houghlines.cpp  makefile
assignment_3/task_3/: houghCircles  houghCircles.cpp
assignment_3/task_4/: task4_capture  task4_capture.cpp
assignment_3/task_5/: task5_captureGray  task5_captureGray.cpp
assignment_3/task_5/task5_frames/: frame_0.pgm  frame_1.pgm  frame_10.pgm  frame_100.pgm  frame_1000.pgm  frame_1001.pgm  frame_1002.pgm  frame_1003.pgm  frame_1004.pgm  frame_1005.pgm  frame_1006.pgm  frame_1007.pgm  frame_1008.pgm  frame_1009.pgm  frame_101.pgm  frame_1010.pgm  frame_1011.pgm  frame_1012.pgm  frame_1013.pgm  frame_1014.pgm  frame_1015.pgm  frame_1016.pgm  frame_1017.pgm  frame_1018.pgm  frame_1019.pgm  frame_102.pgm  frame_1020.pgm  frame_1021.pgm  frame_1022.pgm  frame_1023.pgm  frame_1024.pgm  frame_1025.pgm  frame_1026.pgm  frame_1027.pgm  frame_1028.pgm  frame_1029.pgm  frame_103.pgm  frame_1030.pgm  frame_1031.pgm  (+1187 more)
assignment_3/task_6/: pointDetector  pointDetector.cpp
